--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "NODE_OPTIONS=--max-old-space-size=8192 next dev",
+    "dev": "next dev",
     "build": "NODE_OPTIONS=--max-old-space-size=8192 next build",
-    "start": "next start",
+    "start": "NODE_OPTIONS=--max-old-space-size=8192 next start -p 3000",
     "lint": "next lint"
   },
   "dependencies": {
